# DocRAGSearch-Modular-Engine

./: .dockerignore  .gitignore  README.md  architecture.md  dockerfile  docragsearch_project_architecture2.md  pyproject.toml  streamlit_app.py
eval/: eval_dataset.json  run_eval.py
src/document_ingestion/: document_processor.py
src/graph_builder/: builder.py
src/nodes/: generation_node.py  grader_node.py  retrieval_node.py  router.py  web_search_node.py
src/state/: __init__.py
src/vectorstore/: qdrant_manager.py
